tests/istio_testcases/example_policies/multi-layer-tests/onlineboutique-resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onlineboutique
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    name: onlineboutique
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: onlineboutique
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: onlineboutique
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: onlineboutique
spec:
  {}
