tests/istio_testcases/example_policies/multi-layer-tests/onlineboutique-resources/recommendationservice.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: recommendationservice
  namespace: onlineboutique
  annotations:
    iam.gke.io/gcp-service-account: onlineboutique-gsa@mygke-200.iam.gserviceaccount.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: onlineboutique
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      serviceAccountName: recommendationservice
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-east4-docker.pkg.dev/mygke-200/containers/boutique/recommendationservice:v0.3.7
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          timeoutSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          timeoutSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        env:
        - name: PORT
          value: "8080"
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: "productcatalogservice:3550"
        - name: DISABLE_TRACING
          value: "1"
        - name: DISABLE_PROFILER
          value: "1"
        - name: DISABLE_DEBUGGER
          value: "1"
        resources:
          requests:
            cpu: 100m
            memory: 220Mi
          limits:
            cpu: 200m
            memory: 450Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: onlineboutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: recommendationservice
  namespace: onlineboutique
spec:
  targetRef:
    apiVersion: "apps/v1"
    kind: Deployment
    name: recommendationservice
  updatePolicy:
    updateMode: "Off"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendationservice
  namespace: onlineboutique
spec:
  podSelector:
    matchLabels:
      app: recommendationservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
     - port: 8080
       protocol: TCP
  egress:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: recommendationservice
  namespace: onlineboutique
spec:
  selector:
    matchLabels:
      app: recommendationservice
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/onlineboutique/sa/frontend"]
    to:
      - operation:
          paths: ["/hipstershop.RecommendationService/ListRecommendations"]
          methods: ["POST"]
          ports: ["8080"]
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: recommendationservice
  namespace: onlineboutique
spec:
  workloadSelector:
    labels:
      app: recommendationservice
  egress:
  - hosts:
    - "istio-system/*"
    - "./productcatalogservice.onlineboutique.svc.cluster.local"
